package org.example.pattern.proxy.one;

/**
 *
 * 代理
 *
 * @author: zyh
 * @date: 2022/10/12
 */
public interface WizardTower {

    void enter(Wizard wizard);

}
